--- a/templates/init-pass-mail.html
+++ b/templates/init-pass-mail.html
@@ -9,6 +9,7 @@
                   <br/>
                   <p>Hello<b>{{ username }}</b>,</p>
                   <p>Click on this link for init your password : {{ init_link }}</p>
-                  <p>BeakHub Team</p>"
+                  <p>BeakHub Team</p>
+
 </body>
 </html>
